fix avatar inpiut size on mobile

--- a/src/pages/Home/Profile/Avatar/Avatar.less
+++ b/src/pages/Home/Profile/Avatar/Avatar.less
@@ -104,6 +104,11 @@
 
         .avatar__form {
           margin-left: calc(30vw - 15px);
+
+          .avatar__inputfile+label {
+            width: 30vw;
+            height: 30vw;
+          }
         }
       }
     }
